# Cloudflared-Zero-Trust

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  tunnelrpc.capnp.c++  tunnelrpc.capnp.h
.github/workflows/: ci.yml  codeql.yml  cross.yml  release.yml
cmake/: capnp.cmake  msquic.cmake
cmake/patches/: msquic-mipsel-openssl.cmake
cmake/stubs/: atomic_mips32.c
cmake/toolchains/: arm-eabi5-openwrt-musl.cmake  arm-openwrt-musl.cmake  mipsel-openwrt-musl.cmake
docs/: CERT.md  ISSUES.md  RELEASING.md  config.example.ini  feature.md  probe.md
fuzz/: CMakeLists.txt  README.md  fuzz_cidr.cpp  fuzz_frame.cpp  fuzz_registration.cpp
include/cfd/: buffer.hpp  cidr.hpp  cloudflare_ca.hpp  config.hpp  frame.hpp  log.hpp  lpm_trie.hpp  msquic_raii.hpp  netlink.hpp  quic_client.hpp  registration.hpp  router.hpp  tun.hpp  unique_fd.hpp
openwrt/: Makefile  README.md
openwrt/files/etc/config/: cfd
openwrt/files/etc/init.d/: cfd
proto/: go.capnp  tunnelrpc.capnp
scripts/: e2e_warp_test.sh  token_decode.sh
src/: CMakeLists.txt  config.cpp  log.cpp  main.cpp
src/net/: cidr.cpp  lpm_trie.cpp  netlink.cpp
src/router/: router.cpp
src/tools/: probe_handshake.cpp
src/tun/: tun_device_linux.cpp
src/tunnel/: frame.cpp  quic_client.cpp  registration.cpp
src/util/: buffer.cpp  socket.cpp
tests/: CMakeLists.txt  test_cidr.cpp  test_frame.cpp  test_lpm.cpp  test_netlink.cpp  test_registration.cpp
