add_executable(test_cidr     test_cidr.cpp)
add_executable(test_lpm      test_lpm.cpp)
add_executable(test_frame    test_frame.cpp)
add_executable(test_registration test_registration.cpp)
add_executable(test_netlink      test_netlink.cpp)
target_link_libraries(test_cidr         PRIVATE cfd_core)
target_link_libraries(test_lpm          PRIVATE cfd_core)
target_link_libraries(test_frame        PRIVATE cfd_core)
target_link_libraries(test_registration PRIVATE cfd_core)
target_link_libraries(test_netlink      PRIVATE cfd_core)
add_test(NAME cidr         COMMAND test_cidr)
add_test(NAME lpm          COMMAND test_lpm)
add_test(NAME frame        COMMAND test_frame)
add_test(NAME registration COMMAND test_registration)
add_test(NAME netlink      COMMAND test_netlink)
